[package]
name = "address-hasher-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.0"
syn = "1.0.107"
profile = { path = "./profile" }
tokio = { version = "1.0.1", features = ["full"] }
executor = "0.8.4"
futures = "0.3.26"
[profile.dev]
opt-level = 0

[features]
profile=["profile/profile"]
